# quantus-miner

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  EXTERNAL_MINER_PROTOCOL.md  README.md  agents.md  cpu-mining-algorithm.md  cuda-builder.cf  optimisation-roadmap.md  rust-toolchain
.github/actions/disk/: action.yml
.github/workflows/: ci.yml  cuda-build.yml  cuda-builder.yml  docker-image.yml  release-proposal.yml  release-publish.yml  release.yml
api/: openapi.yaml
crates/engine-cpu/: Cargo.toml
crates/engine-cpu/benches/: cpu_engine_bench.rs
crates/engine-cpu/src/: lib.rs
crates/engine-gpu/: Cargo.toml
crates/engine-gpu-cuda/: Cargo.toml  build.rs  readme.md
crates/engine-gpu-cuda/src/: lib.rs
crates/engine-gpu-cuda/src/kernels/: qpow_kernel.cu
crates/engine-gpu-opencl/: Cargo.toml
crates/engine-gpu-opencl/src/: lib.rs
crates/engine-gpu/benches/: gpu_engine_bench.rs
crates/engine-gpu/examples/: verify_nonce.rs
crates/engine-gpu/src/: end_to_end_tests.rs  gf_mul_test.wgsl  gpu_tiers.rs  lib.rs  main.rs  mining.wgsl  poseidon2_constants.wgsl  tests.rs
crates/engine-hybrid/: Cargo.toml
crates/engine-hybrid/src/: lib.rs
crates/engine-montgomery/: Cargo.toml  readme.md
crates/engine-montgomery/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/miner-cli/: Cargo.toml  build.rs
crates/miner-cli/src/: main.rs
crates/miner-service/: Cargo.toml
crates/miner-service/src/: lib.rs  quic.rs  zk_aggregation.rs
crates/miner-telemetry/: Cargo.toml
crates/miner-telemetry/src/: lib.rs
crates/pool-api/: Cargo.toml
crates/pool-api/src/: lib.rs
crates/pool-service/: Cargo.toml
crates/pool-service/src/: coordinator.rs  lib.rs  node_client.rs  websocket.rs  wins.rs
crates/pow-core/: Cargo.toml
crates/pow-core/src/: lib.rs
docs/: delegated-aggregation-miner.md  key-management.md
docs/grafana/: engines-comparison-dashboard.json  instances-comparison-dashboard.json  miner-dashboard.json
docs/implementation/: 00-cpu-algorithm-and-optimisation-roadmap.md  01-prompt-metrics-toggle-and-soc-restructure.md  01-response-metrics-toggle-and-soc-restructure.md  02-prompt-cpu-fast-engine-and-metrics.md  02-response-cpu-fast-engine-and-metrics.md  03-prompt-engine-comparability.md  03-response-engine-comparability.md  04-prompt-metrics-chunking-and-dashboards.md  04-response-metrics-chunking-and-dashboards.md  05-prompt-workers-and-dashboards-sync.md  05-response-workers-and-dashboards-sync.md  06-prompt-manipulator-and-difficulty-overlay.md  06-response-manipulator-and-difficulty-overlay.md  07-prompt-stable-clippy-taplo-and-gpu-enum.md  07-response-stable-clippy-taplo-and-gpu-enum.md  08-prompt-cpuset-metric-and-systemd-units.md  08-response-cpuset-metric-and-systemd-units.md  09-prompt-high-value-unit-tests.md  09-response-high-value-unit-tests.md  readme.md
examples/.env/: README.md  cuda-miner-3060-debug.env  cuda-miner-3060-lower.env  cuda-miner-3060-upper.env  cuda-miner-3080-lower.env  cuda-miner-3080-upper.env  cuda-miner-3090-lower.env  cuda-miner-3090-upper.env  cuda-miner-4080-lower.env  cuda-miner-4080-upper.env  cuda-miner-4090-lower.env  cuda-miner-4090-upper.env  cuda-miner-5090-debug.env  cuda-miner-5090-lower.env  cuda-miner-5090-stable.env  cuda-miner-5090-upper.env  cuda-miner-a5000-lower.env  cuda-miner-a5000-upper.env  cuda-miner-a6000-lower.env  cuda-miner-a6000-upper.env
examples/grafana/: engine-health-dashboard.json  engines-comparison-dashboard.json  gpu-cuda-found-origins.json
examples/systemd/: quantus-miner.service  readme.md
examples/systemd/overrides/: 10-shared-hardware.conf  20-dedicated-hardware.conf
scripts/: local-cuda-build.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs  spec_tests.rs
web-miner/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-miner/src/: gpu-miner.ts  main.ts  mining.wgsl  pool-client.ts  types.ts  vite-env.d.ts
