[workspace]
members = [
	"crates/engine-cpu",
	"crates/engine-gpu",
	"crates/metrics",
	"crates/miner-cli",
	"crates/miner-service",
	"crates/miner-telemetry",
	"crates/pow-core",
]
default-members = ["crates/miner-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Quantus Network"]
description = "Quantus External Miner Workspace"
version = "2.1.2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec", features = ["derive", "std"] }
crossbeam-channel = "0.5"
env_logger = "0.10"
hex = { version = "0.4.3", features = ["alloc"] }
log = { version = "0.4.22", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num_cpus = "1.16"
primitive-types = { version = "0.13.1", default-features = false }
qp-poseidon-core = { version = "1.0.1", default-features = false }
qpow-math = { git = "https://github.com/Quantus-Network/chain.git", package = "qpow-math", default-features = false }
# Point to local chain repo for development; switch back to crates.io version for release
quantus-miner-api = { git = "https://github.com/Quantus-Network/chain.git", package = "miner-api", branch = "illuzen/quic-miner" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"                                                   # Used by metrics crate for Prometheus HTTP endpoint
# pow-core now delegates to qpow-math for core functionality while providing optimized mining scaffolding.

# GPU backend dependencies are declared in individual engine crates (no optional deps in workspace)

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 1
