[workspace]
members = [
	"crates/engine-cpu",
	"crates/engine-gpu",
	"crates/metrics",
	"crates/miner-cli",
	"crates/miner-service",
	"crates/miner-telemetry",
	"crates/pow-core",
]
default-members = ["crates/miner-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Quantus Network"]
description = "Quantus External Miner Workspace"
version = "2.1.2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec", features = ["derive", "std"] }
crossbeam-channel = "0.5"
env_logger = "0.10"
hex = { version = "0.4.3", features = ["alloc"] }
log = { version = "0.4.22", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num_cpus = "1.16"
primitive-types = { version = "0.13.1", default-features = false }
qp-poseidon-core = { version = "1.4.0", default-features = false }
qpow-math = { git = "https://github.com/Quantus-Network/chain.git", tag = "v0.4.11-star-dust", package = "qpow-math", default-features = false }
quantus-miner-api = { git = "https://github.com/Quantus-Network/chain.git", tag = "v0.4.11-star-dust" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 1
