[package]
name = "engine-gpu-cuda"
version = "0.1.0"
edition = "2021"
publish = false
description = "CUDA-based GPU mining engine for the Quantus External Miner (placeholder crate)"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
# Enable CUDA integrations when implementing the engine.
cuda = ["dep:cust"]

[dependencies]
pow-core = { path = "../pow-core" }
primitive-types = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# CUDA ecosystem (optional for now; will be used when implementing GPU backend)
cust = { version = "0.3", optional = true }
rustacuda = { version = "0.1", optional = true }
