[package]
name = "engine-gpu"
version.workspace = true
edition.workspace = true
publish = false
description = "GPU mining engine implementation for the Quantus External Miner"

# [lib]
# path = "src/main.rs"
# crate-type = ["rlib"]

[features]
# Default to the baseline/reference implementation; enable others as needed.
default = ["baseline", "metrics"]

# Map engine features (pow-core dependency removed for now)
baseline = []
simd-poseidon2 = []
metrics = ["dep:metrics"]

[dependencies]
engine-cpu = { path = "../engine-cpu" }
pow-core = { path = "../pow-core" }
metrics = { path = "../metrics", optional = true }
primitive-types = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
qp-poseidon-core = { version = "1.0.2", features = ["p2"] }
qp-poseidon-constants = { version = "1.0.2" }
qp-plonky2 = { version = "1.1.1" }
qp-plonky2-field = { version = "1.1.1" }


wgpu = { version = "27.0.1" }                              # GPU compute library
futures = "0.3"                                            # For async executor
bytemuck = "1.16"                                          # For buffer mapping
rand = { workspace = true, features = ["std", "std_rng"] }
rand_chacha = "0.3"                                        # For deterministic random test generation

[dev-dependencies]
hex = { workspace = true }
criterion = "0.5"
rand = { workspace = true, features = ["std", "std_rng"] }
env_logger.workspace = true

[[bench]]
name = "gpu_engine_bench"
harness = false
