[package]
name = "engine-gpu"
version.workspace = true
edition.workspace = true
publish = false
description = "GPU mining engine implementation for the Quantus External Miner"

# [lib]
# path = "src/main.rs"
# crate-type = ["rlib"]

[features]
# Default to the baseline/reference implementation; enable others as needed.
default = ["baseline"]

# Map engine features (pow-core dependency removed for now)
baseline = []
simd-poseidon2 = []

[dependencies]
engine-cpu = { path = "../engine-cpu" }
pow-core = { path = "../pow-core" }
primitive-types = { workspace = true }
log = { workspace = true }
qp-poseidon-core = { workspace = true }
qp-poseidon-constants = "1.1"
qp-plonky2-field = { version = "1.1.1" }
plonky2 = { package = "qp-plonky2", version = "1.1.3" }

wgpu = { version = "27.0.1" }                              # GPU compute library
tokio = { workspace = true, features = ["rt", "time"] }    # Async runtime with timeout support
futures = "0.3"                                            # For async oneshot channels in test modules
bytemuck = "1.16"                                          # For buffer mapping
rand = { workspace = true, features = ["std", "std_rng"] }
rand_chacha = "0.9"                                        # For deterministic random test generation
regex = "1"                                                # For GPU name pattern matching

[dev-dependencies]
hex = { workspace = true }
criterion = "0.5"
rand = { workspace = true, features = ["std", "std_rng"] }
env_logger.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] } # Add macros for #[tokio::main]

[[bench]]
name = "gpu_engine_bench"
harness = false
