[package]
name = "engine-hybrid"
version.workspace = true
edition.workspace = true
publish = false
description = "Hybrid CPU+GPU mining engine for the Quantus External Miner"

[features]
default = []
# Enable GPU engine support (CPU is always available for hybrid)
gpu = ["engine-gpu"]

[dependencies]
# Workspace-shared deps
log = { workspace = true }
primitive-types = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Local engine crates
engine-cpu = { path = "../engine-cpu" }
engine-gpu = { path = "../engine-gpu", optional = true }
pow-core = { path = "../pow-core" }

# Additional dependencies
num_cpus = { workspace = true }
