[package]
name = "engine-montgomery"
version.workspace = true
edition.workspace = true
description = "Montgomery-optimized CPU mining engine for Quantus External Miner"

[lib]
name = "engine_montgomery"
path = "src/lib.rs"

[features]
default = []
metrics = ["dep:metrics"]
adx-trace = []

[dependencies]
# Reuse the engine trait and shared types exposed by engine-cpu
engine-cpu = { path = "../engine-cpu" }
# Access job context and core PoW math interfaces
pow-core = { path = "../pow-core" }

# Workspace-aligned deps
primitive-types = { workspace = true }
log = { workspace = true }

num-traits = { workspace = true }
metrics = { path = "../metrics", optional = true }

# Fixed-width big-integer backend for 512-bit Montgomery ops
crypto-bigint = "0.5"
