[package]
name = "metrics"
version.workspace = true
edition.workspace = true
publish = false
description = "Metrics and Prometheus exporter utilities for the Quantus External Miner"

[features]
default = []
# Enable a Warp-based HTTP exporter (used when --metrics-port is provided).
http-exporter = ["dep:tokio", "dep:warp"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
once_cell = "1"
prometheus = { version = "0.13", default-features = false }

# Optional HTTP exporter stack (enabled via `http-exporter` feature)
warp = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
