[package]
name = "miner-cli"
version = "0.1.0"
edition = "2021"
publish = false
description = "CLI binary to run the Quantus External Miner service"
build = "build.rs"


[features]
default = []
cuda = ["miner-service/cuda"]

[dependencies]
miner-service = { path = "../miner-service" }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
env_logger = { workspace = true }
log = { workspace = true }

[[bin]]
name = "quantus-miner"
path = "src/main.rs"
