[package]
name = "miner-cli"
version.workspace = true
edition.workspace = true
publish = false
description = "CLI binary to run the Quantus External Miner service"

[features]
default = []

[dependencies]
miner-service = { path = "../miner-service" }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
env_logger = { workspace = true }
log = { workspace = true }

[[bin]]
name = "quantus-miner"
path = "src/main.rs"
