[package]
name = "miner-cli"
version.workspace = true
edition.workspace = true
publish = false
description = "CLI binary to run the Quantus External Miner service"

[dependencies]
miner-service = { path = "../miner-service" }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
env_logger = { workspace = true }
log = { workspace = true }
engine-cpu = { path = "../engine-cpu" }
engine-gpu = { path = "../engine-gpu" }
primitive-types = { workspace = true }
rand = { workspace = true }
num_cpus = { workspace = true }

[[bin]]
name = "quantus-miner"
path = "src/main.rs"
