[package]
name = "miner-service"
version.workspace = true
edition.workspace = true
publish = false
description = "QUIC-based mining service for the Quantus External Miner"

[features]
default = ["cpu"]
cpu = ["engine-cpu"]

[dependencies]
# Workspace-shared deps
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
primitive-types = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
anyhow = { workspace = true }

# QUIC transport
quinn = "0.10"
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration", "quic"] }
getrandom = "0.2"

# Protocol types from the node repo
quantus-miner-api = { workspace = true }

# Local crates
pow-core = { path = "../pow-core" }
engine-cpu = { path = "../engine-cpu", optional = true }
engine-gpu = { path = "../engine-gpu" }
metrics = { path = "../metrics" }
