[package]
name = "miner-service"
version.workspace = true
edition.workspace = true
publish = false
description = "QUIC-based mining service for the Quantus External Miner"

[features]
default = ["cpu"]
cpu = ["engine-cpu"]

[dependencies]
# Workspace-shared deps
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
primitive-types = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
getrandom = "0.2"

# QUIC transport with post-quantum support
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pki-types = "1"
rustls-post-quantum = "0.2"

# Protocol types from the node repo
quantus-miner-api = { workspace = true }

# Local crates
pow-core = { path = "../pow-core" }
engine-cpu = { path = "../engine-cpu", optional = true }
engine-gpu = { path = "../engine-gpu" }
metrics = { path = "../metrics" }
