[package]
name = "pool-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Protocol types for Quantus mining pool communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
